--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snozzi</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="images/planet-earth.png">
+    <link rel="icon" type="image/x-icon" href="planet-earth.png">
 </head>
 <body>
     <div class="main-body-wrapper">
         <div class="main-body">
-            <img class="snozzi-pfp shake" loading="lazy" src="images/snozzi-pfp.jpg" alt="Snozzi Pfp">
+            <img class="snozzi-pfp shake" loading="lazy" src="/snozzi-pfp.jpg" alt="Snozzi Pfp">
             <div class="main-body-button-wrapper">
                 <a href="#"><button class="btn-1 buttons">Coming Soon???</button></a>
                 <a href="#"><button class="btn-2 buttons">Coming Soon???</button></a>
