--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="main-body">
             <img class="snozzi-pfp shake" loading="lazy" src="/snozzi-pfp.jpg" alt="Snozzi Pfp">
             <div class="main-body-button-wrapper">
-                <a href="#"><button class="btn-1 buttons">Coming Soon???</button></a>
-                <a href="#"><button class="btn-2 buttons">Coming Soon???</button></a>
+                <a href="about.html"><button class="btn-1 buttons">About me</button></a>
+                <a href="projects.html"><button class="btn-2 buttons">Projects</button></a>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><button class="btn-3 buttons">Find out</button></a>
             </div>
             <div class="main-body-icon-wrapper">
