--- a/about.html
+++ b/about.html
@@ -6,13 +6,14 @@
     <title>About</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
-    <link rel="icon" type="image/x-icon" href="images/planet-earth.png">
+    <link rel="icon" type="image/x-icon" href="planet-earth.png">
 </head>
 <body class="about-me">
     <div class="main-body-wrapper-aboutme">
-        <img loading="lazy" src="images/snozzi-pfp.jpg" alt="Profile Picture" class="profile-pic">
+        <img loading="lazy" src="snozzi-pfp.jpg" alt="Profile Picture" class="profile-pic">
         <div class="main-body-paragraph">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam inventore voluptates dolore iusto nobis debitis accusamus repellat fugiat molestias, repellendus numquam hic ab quasi nam exercitationem, consectetur delectus consequuntur! Cupiditate ad laborum modi aspernatur quibusdam unde, ratione doloremque vitae cum hic. Aliquam nihil est molestias eligendi assumenda asperiores fugit suscipit porro soluta, autem dolor amet sed provident aut veritatis. Fugiat dolorum fugit dolor officiis, veritatis maiores libero sapiente itaque ullam eum! Dolores molestiae adipisci voluptatum dolorem odio deserunt, corporis quibusdam, cumque vitae labore qui aspernatur tempore nostrum sint fugiat repellat quas veritatis. Asperiores culpa porro blanditiis eum fugit eligendi temporibus.
+            <p>Heyo<span class="wave">👋</span>! My name is Snozzi and i am a Frontend Developer! I code, play video games and do sports on my free time.
+            </p>
         </div>
         <div class="arrow-back">
             <a href="/"><i class="fa-solid fa-arrow-left"></i></a>
