--- a/index.html
+++ b/index.html
@@ -3,26 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snozzi</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="planet-earth.png">
 </head>
 <body>
-    <div class="main-body-wrapper">
-        <div class="main-body">
-            <img class="snozzi-pfp shake" loading="lazy" src="/snozzi-pfp.jpg" alt="Snozzi Pfp">
-            <div class="main-body-button-wrapper">
-                <a href="about.html"><button class="btn-1 buttons">About me</button></a>
-                <a href="projects.html"><button class="btn-2 buttons">Projects</button></a>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><button class="btn-3 buttons">Find out</button></a>
-            </div>
-            <div class="main-body-icon-wrapper">
-                <div class="icon-html"><i class="fa-brands fa-html5" style="color: #FFA500;"></i></div>
-                <div class="icon-css"><i class="fa-brands fa-css3-alt" style="color: #5d7aeb;"></i></div>
-            </div>
+    <div class="gradient-circle" id="gradient-one"></div>
+    <div class="gradient-circle" id="gradient-two"></div>
+    <div class="gradient-circle" id="gradient-three"></div>
+
+    <div class="header">
+        <p style="color: white; text-align: center;">Hi, I'm Snozzi <span class="wave">👋</span></p>
+        <div class="profile-pic-container">
+            <img src="snozziii.png" class="profile-pic" alt="Profile Picture of Snozzi">
+        </div>
+        <h5 style="text-align: center; color: white; padding-top: 1rem;">Hi! I'm Snozzi a 17 year old frontend developer <br>and student from Norway</h5>
+    </div>
+
+    <p style="color: white; text-align: center; padding-top: 8rem; font-size: 30px;" class="h2-underline">About me</p>
+    <div class="grid-container-about">
+        <div class="grid-item" id="item1">
+            <i class="fa-solid fa-code" style="color: rgba(255, 0, 0, 0.55); font-size: 3rem; margin-bottom: 1rem;"></i>
+            <h2>Programming</h2>
+            <p>Proficient in multiple languages, 
+                <br>
+                creating fast and easy solutions.</p>
+        </div>
+        <div class="grid-item" id="item2">
+            <i class="fa-solid fa-laptop-code"  style="color: rgba(255, 0, 0, 0.55); font-size: 3rem; margin-bottom: 1rem;"></i>
+            <h2>Visuals</h2>
+            <p>Focused on creating visually appealing,
+                <br>
+                and user-friendly websites.</p>
+            </p>
+        </div>
+        <div class="grid-item" id="item3">
+            <i class="fa-solid fa-laptop-file" style="color: rgba(255, 0, 0, 0.55); font-size: 3rem; margin-bottom: 1rem;"></i>
+            <h2>Learning</h2>
+            <p>I love learning new things that excite and challenge me.</p>
+            </p>
         </div>
     </div>
 
+    <p style="color: white; text-align: center; padding-top: 8rem; font-size: 30px;" class="h2-underline">Skills</p>
+    <div class="skills" style="color: white;">
+        <i class="fa-brands fa-html5" style="font-size: 3rem; color: rgba(255, 0, 0, 0.55)">
+            <p class="p-hover" style="font-size: 13px; color: white;">HTML</p>
+        </i>
+        <i class="fa-brands fa-css3" style="font-size: 3rem; color: rgba(255, 0, 0, 0.55)">
+            <p class="p-hover" style="font-size: 13px; color: white;">CSS</p>
+        </i>
+        <i class="fa-brands fa-css3" style="font-size: 3rem; color: rgba(255, 0, 0, 0.55)">
+            <p class="p-hover" style="font-size: 13px; color: white;">Tailwind</p>
+        </i>
+        <i class="fa-brands fa-discord" style="font-size: 3rem; color: rgba(255, 0, 0, 0.55)">
+            <p class="p-hover" style="font-size: 13px; color: white;;">Discord</p>
+        </i>
+    </div>
+
+    <footer style="text-align: center; margin-top: 50px;">
+        <p style="color: white;">Made with ❤️ by Snozzi</p>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/85079ad6f3.js" crossorigin="anonymous"></script>
 </body>
-<script src="https://kit.fontawesome.com/85079ad6f3.js" crossorigin="anonymous"></script>
 </html>
