--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="profile-pic-container">
             <img src="snozziii.png" class="profile-pic" alt="Profile Picture of Snozzi">
         </div>
-        <h5 style="text-align: center; color: white; padding-top: 1rem;">Hi! I'm Snozzi a 17 year old frontend developer <br>and student from Norway</h5>
+        <h5 style="text-align: center; color: white; padding-top: 1rem;">Hi! I'm Snozzi. I am a frontend developer <br>and student from Norway!</h5>
     </div>
 
     <p style="color: white; text-align: center; padding-top: 8rem; font-size: 30px;" class="h2-underline">About me</p>
