--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="header">
         <p style="color: white; text-align: center;">Hi, I'm Snozzi <span class="wave">👋</span></p>
         <div class="profile-pic-container">
-            <img src="snozziii.png" class="profile-pic" alt="Profile Picture of Snozzi">
+            <img src="https://i.postimg.cc/56zJycc1/snozziii.png" class="profile-pic" alt="Profile Picture of Snozzi" loading="lazy">
         </div>
-        <h5 style="text-align: center; color: white; padding-top: 1rem;">Hi! I'm Snozzi. I am a frontend developer <br>and student from Norway!</h5>
+        <h5 style="text-align: center; color: white; padding-top: 1rem;">Hi! I'm Snozzi a 17 year old frontend developer <br>and student from Norway</h5>
     </div>
 
     <p style="color: white; text-align: center; padding-top: 8rem; font-size: 30px;" class="h2-underline">About me</p>
