--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="project-card" id="project3">
                 <div class="project-content">
                     <h3>Anticheat Website UNFINISHED</h3>
-                    <p>A weather application that provides real-time weather updates, forecasts, and alerts for any location. Built using modern APIs and a clean user interface.</p>
+                    <p>A concept website for a FiveM anticheat client. </p>
                 </div>
                 <div class="project-image">
                     <img src="https://i.postimg.cc/Cx3kwxxt/Skjermbilde-2025-04-04-153759.png" alt="">
